# time_decode

./: .TYPES.md.swp  .gitignore  LICENSE  README.md  REFERENCES.md  TYPES.md  date_decode.py  dmg.sh  icon.icns  pyproject.toml  setup.py  time-decode-gui.spec  time-decode-mac.spec  time-decode.spec  time_decode.py  version.txt
time_decode/: time_decode.py
