[build-system]
requires = ["setuptools >= 77.0.30"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["debian*", "binaries*", "build*", "dist*"]

[project]
name = "time-decode"
version = "10.0.0"
dependencies = [
    "PyQt6",
    "colorama",
    "tzdata",
    "juliandate",
    "prettytable",
    "python-ulid",
    "bbpb"
]
requires-python = ">=3.9"
authors = [
  {name = "Corey Forman (digitalsleuth)", email = "github@digitalsleuth.ca"}
]
maintainers = [
  {name = "Corey Forman (digitalsleuth)", email = "github@digitalsleuth.ca"}
]
description = "Python 3 timestamp decode/encode tool"
readme = "README.md"
keywords = ["digital forensics", "dfir", "timestamp", "decode", "encode"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/digitalsleuth/time_decode"
References = "https://github.com/digitalsleuth/time_decode/blob/master/REFERENCES.md"

[project.scripts]
time-decode = "time_decode.time_decode:main"
